# utils-deskband

./: .gitmodules  CMakeLists.txt  README.md  _gen_prj_msvc.bat  _register.bat  _unregister.bat  project_configs.cmake
scripts/: _configs.lua  _main.lua
src/: ClassFactory.cpp  ClassFactory.h  DeskBand.cpp  DeskBand.h  dll_main.cpp
test/: CMakeLists.txt
test/src/: main.cpp
